# CodeQuiz

./: .gitignore  .gitmodules  README.md
Bonus_01/: Aufgabe.md
Bonus_02/: Aufgabe.md
CodeQuizRunner/: CodeQuizRunner.sln
CodeQuizRunner/CodeQuizRunner/: App.xaml  App.xaml.cs  CodeQuizRunner.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  RelayCommand.cs
CodeRunner/: CodeRunner.sln
CodeRunner/CodeRunner/: App.xaml.cs  CodeRunner.csproj  README.md  packages.config
CodeRunner/ConsoleFrontend/: ConsoleFrontend.csproj  Program.cs
CodeRunner/Startup/: App.xaml  App.xaml.cs  Startup.csproj  packages.config
CodeRunner/WpfFrontend/: App.xaml  App.xaml.cs  WpfFrontend.csproj  packages.config
Week_01/: Aufgabe.md
Week_01/Niklas/: array_shift.bf
Week_01/Remo/: q1.go  q1.hs  q1.js  q1.scm
Week_02/degerlp/: pyramide.pas
Week_03/Joe/: Program.fs
Week_03/Remo/: test.py
Week_04/: Aufgabe.md
Week_04/Niklas/: monopoly.py
Week_05/: Aufgabe.md
Week_05/Oliver/: main.cpp  primes.h
Week_06/Remo/: sudoku.hs
Week_07/Jerome/: Api.sln
Week_07/Thilo/: .gitignore  CMakeLists.txt  aentity.json  aentity_merged.json  bentity.json  foo.json  foo_merged.json
Week_07/Thilo/src/: main.cpp
Week_08/: Aufgabe.md
Week_08/Remo/: CustomFields.hs  Filter.hs  Response.hs  main.hs
Week_08/Thilo/: README.md  mix.exs
Week_08/jan/: package.json
Week_09/: Aufgabe.md  dummy.jsonTest  remoteEndpoint.cfg
Week_09/Joe/: Equation Deriver.ipynb  Equation Parser.ipynb  README.md
Week_09/jan/: .gitignore  CMakeLists.txt  coderunner.json  main.cpp  polyparser
Week_09/jan/include/: derivable.h  factory.h  func_constant.h  func_monom.h  func_prod.h  func_sum.h  func_x.h
Week_09/jan/src/: derivable.cpp  factory.cpp  func_constant.cpp  func_monom.cpp  func_prod.cpp  func_sum.cpp  func_x.cpp
Week_09/jan/tests/: factory.cpp  func_constant.cpp  func_monom.cpp  func_prod.cpp  func_sum.cpp  func_x.cpp
Week_1/Niklas/: array_shift.php
Week_1/Remo/: q1.c  q1.py  q1_1.c
Week_1/degerlp/: listen.pas
Week_10/: Aufgabe.md  joe.md
Week_11/: Aufgabe.md
Week_12/: Aufgabe.md
Week_13/: Aufgabe.md
Week_2/: Aufgabe.md  pyramide.jsonTest
Week_2/Jerome/: Quiz2.sln
Week_3/: Aufgabe.md  strings.jsonTest
Week_4/: Aufgabe.md
Week_6/: Aufgabe.md
Week_7/: .Aufgabe.md.swp  Aufgabe.md
Week_8/: Aufgabe.md
Week_9/: Aufgabe.md
__CodeRunner/: CodeRunner.sln
(+283 files in other folders)
